Implement JarContents without relying on UnionFS (#342)
Co-authored-by: Matyrobbrt <65940752+Matyrobbrt@users.noreply.github.com>